find_package(Boost 1.48.0 REQUIRED COMPONENTS test_exec_monitor system timer)
add_executable(stable test.cpp)
add_executable(sanity counting_sanity.cpp)
include_directories(${Boost_INCLUDE_DIRS})
link_directories(${Boost_LIBRARY_DIRS})
target_link_libraries(stable rt ${Boost_LIBRARIES})
target_link_libraries(sanity ${Boost_LIBRARIES})
add_test(stable stable)
add_test(sanity sanity)
