find_package(Boost 1.48.0 REQUIRED COMPONENTS test_exec_monitor system timer)
add_executable(unstable_sanity counting_sanity.cpp)
add_executable(stable_sanity stable_counting_sanity.cpp)
add_executable(speedtest test.cpp)
include_directories(${Boost_INCLUDE_DIRS})
link_directories(${Boost_LIBRARY_DIRS})
target_link_libraries(unstable_sanity ${Boost_LIBRARIES})
target_link_libraries(stable_sanity ${Boost_LIBRARIES})
target_link_libraries(speedtest ${Boost_LIBRARIES})
add_test(unstable_sanity unstable_sanity)
add_test(stable_sanity stable_sanity)
